tests/NormalTests/paczka2/big_fuzzy/35022988.err
Error in line 3: Kq88zGQ8 A505 90,8
Error in line 8: qUGpzJN8 A505 6,8
Error in line 7: 8pCaJ S198 12,6
Error in line 9: FrsJquPnSMj A505 196,6
Error in line 27: FrsJquPnSMj S513 15,2
Error in line 26: Kq88zGQ8 S513 99,3
Error in line 19: S513 S198 112,6
Error in line 55: qUGpzJN8 A296 6,0
Error in line 48: 8pCaJ S198 79,7
Error in line 64: 8pCaJ S513 85,4
Error in line 60: S513 A296 93,3
Error in line 63: 5mrK A296 1,9
Error in line 70: 5mrK S513 65,9
Error in line 74: qUGpzJN8 S513 89,7
Error in line 83: qUGpzJN8 S198 66,52
Error in line 71: jEf55P6j S513 1,5
Error in line 85: 5mrK A296 16,5
Error in line 82: qUGpzJN8 A505 197,0
Error in line 92: S513 A296 63,8
Error in line 99: qUGpzJN8 S198 261,5
Error in line 114: Kq88zGQ8 S198 250,8
Error in line 117: FrsJquPnSMj A505 21,22
Error in line 115: Kq88zGQ8 A505 75,7
Error in line 121: jEf55P6j A505 10,0
Error in line 131: 5mrK A505 15,2
Error in line 123: S513 A296 86,4
Error in line 133: 8pCaJ S198 286,4
Error in line 119: FrsJquPnSMj A505 64,2
Error in line 142: qUGpzJN8 S513 14,7
Error in line 141: jEf55P6j A296 30,5
Error in line 159: jEf55P6j S513 82,4
Error in line 163: jEf55P6j S198 45,0
Error in line 168: jEf55P6j A505 82,9
Error in line 144: 5mrK S198 5,5
Error in line 182: jEf55P6j A505 18,4
Error in line 184: jEf55P6j S513 52,4
Error in line 194: FrsJquPnSMj S513 38,5
Error in line 193: 5mrK A505 3,7
Error in line 189: 8pCaJ A505 126,0
Error in line 201: 8pCaJ A296 54,2
Error in line 203: 8pCaJ A505 85,0
Error in line 190: S513 S513 22,4
Error in line 197: Kq88zGQ8 A505 143,5
Error in line 205: 8pCaJ A296 5,7
Error in line 198: 5mrK S513 32,4
Error in line 204: jEf55P6j S513 19,1
Error in line 208: Kq88zGQ8 S513 65,5
Error in line 211: 5mrK S198 76,5
Error in line 215: jEf55P6j S198 29,7
Error in line 221: 5mrK S513 63,3
Error in line 222: FrsJquPnSMj A296 4,8
Error in line 226: FrsJquPnSMj S513 28,3
Error in line 236: S513 S513 67,3
Error in line 242: jEf55P6j S198 43,0
Error in line 249: 8pCaJ A505 67,8
